[package]
name = "far_travels"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.10.1", features = ["dynamic_linking"] }
bevy_asset_loader = { version = "0.16.0", features = ["2d", "3d"] }
rand = "0.8.5"
seldom_fn_plugin = "0.3.0"

[profile.dev.package."*"]
opt-level = 3
